[gd_scene load_steps=2 format=3 uid="uid://cfo4gikkjwiu3"]

[ext_resource type="Script" path="res://addons/kuikka_terrain_gen/editor/gml_explorer.gd" id="1_tekc5"]

[node name="GmlExplorer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tekc5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 600)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Avaa"
file_mode = 0
access = 2
use_native_dialog = true

[node name="AuxFileName" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AuxFileDialog" type="FileDialog" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(299, 154)
ok_button_text = "Avaa"
file_mode = 0
access = 2
use_native_dialog = true

[node name="FileNameLine" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AuxOpenFile" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open Aux File"

[node name="OpenFileBtn" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open GML"

[connection signal="file_selected" from="CenterContainer/VBoxContainer/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="CenterContainer/VBoxContainer/AuxFileDialog" to="." method="_on_aux_file_dialog_file_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AuxOpenFile" to="." method="_on_aux_open_file_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OpenFileBtn" to="." method="_on_open_file_btn_pressed"]
